# searchconsole-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
searchconsole_mcp/: __init__.py  coordinator.py  server.py  utils.py
searchconsole_mcp/tools/: __init__.py
tests/: __init__.py  test_coordinator.py  test_tools.py  test_utils.py
